some last small bugfix
Fixed:
- if window was not resized yet, cmd could expand out of bands on new commands (default windowHeight < 60vh)
- too big window content's top padding on fullscreen

Changed:
- smaller default window size
- some code refactoring and clean-up

--- a/styles/components/Window.module.css
+++ b/styles/components/Window.module.css
@@ -31,6 +31,8 @@
 }
 
 .window_content_background_fullscreen {
+  margin: none;
+  padding: none;
   background-color: #181818;
   opacity: 0.9;
   border-radius: "0px";
